[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolveflow"
version = "1.0.0"
description = "OpenSupportEnv — A realistic OpenEnv benchmark for evaluating autonomous agents on customer support operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ResolveFlow Team" }
]
keywords = ["openenv", "benchmark", "rl", "llm", "customer-support", "agent-evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/Electron005/ResolveFlow"
"Repository" = "https://github.com/SkjOO5/ResolveFlow"

[project.scripts]
serve = "server.app:main"
resolveflow-serve = "server.app:main"
resolveflow-infer = "inference:run_baseline"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "server*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
